syntax = "proto3";
package corepb;

message Account {
    bytes address = 1;
    bytes balance = 2;
    uint64 nonce = 3;
    bytes vesting = 4;
    bytes voted = 5;

    repeated bytes records = 6;
    repeated bytes certs_received = 7;
    repeated bytes certs_issued = 8;
    // Transactions
    repeated bytes txs_from = 9;
    repeated bytes txs_to = 10;
}

message Account1 {
    bytes address = 1;
    bytes balance = 2;
    uint64 nonce = 3;

    bytes vesting = 11;
    bytes voted_root_hash = 12;

    bytes collateral = 21;
    bytes voters_root_hash = 22;
    bytes vote_power = 23;

    bytes records_root_hash = 31;
    bytes certs_received_root_hash = 32;
    bytes certs_issued_root_hash = 33;
    bytes txs_from_root_hash = 34;
    bytes txs_to_root_hash = 35;
}